# ppd430

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  format.sh  pyproject.toml  windows-conda-activate.bat
assessments/: group-exercises.md  group-final-project.md  group-peer-review.md  individual-exercises.md  individual-midterm-exam.md  individual-preparatory-notes.md  study-guide.md
assignments/: group-exercise-1.md  group-exercise-2.md  group-exercise-3.md  group-exercise-4.md  group-exercise-5.md  group-exercises.md  group-final-project.md  individual-reflections.md  midterm-exam.md
assignments/assignment-01/: README.md
assignments/assignment-02/: README.md  rents.csv
assignments/assignment-03/: README.md
assignments/assignment-04/: README.md
assignments/assignment-05/: README.md
assignments/final-project/: readme.md
docker/: Dockerfile  environment.yml  readme.md  requirements.txt
docker/windows-env/: create-windows-environment.bat  environment-windows.yml
modules/: windows-launch-jupyterlab.bat
modules/01-introduction/: test.ipynb
modules/02-data-collection/: readme.md
modules/03-coding-bootcamp-i/: lecture.ipynb
modules/04-coding-bootcamp-ii/: lecture.ipynb
modules/05-data-cleaning-description/: lecture.ipynb
modules/05-working-with-data/: lecture.ipynb  practice.ipynb  readme.md
modules/06-data-visualization/: string-formatting.ipynb
modules/06-visualizing-data/: lecture.ipynb  practice.ipynb  readme.md  string-formatting.ipynb
modules/08-spatial-data/: readme.md  (+1 more)
software/: readme.md
syllabus/: readme.md
(+54 files in other folders)
